--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
     "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vue-chartjs": "^3.5.0"
+    "vue-chartjs": "^3.5.0",
+    "vue-slider-component": "^3.1.5",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
