--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
+    "v-clipboard": "^2.2.3",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.0",
     "vue-slider-component": "^3.1.5",
