--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "v-clipboard": "^2.2.3",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.0",
+    "vue-select": "^3.10.7",
     "vue-slider-component": "^3.1.5",
     "vuex": "^3.5.1"
   },
